# distributeddatamgr_pasteboard

./: .gitattributes  .gitignore  11.diff  123.diff  819.diff.txt  969.diff  BUILD.gn  CODEOWNERS  MULTI_USER_TESTING_DESIGN.md  MULTI_USER_TESTING_GUIDE.md  OAT.xml  README.md  README_ZH.md  bundle.json  changes.diff  local.properties  pasteboard.gni  pasteboardEvent.yaml  publicity.xml  user-context-resolver-implementation.diff
adapter/: BUILD.gn
adapter/data_share/: datashare_delegate.cpp  datashare_delegate.h
adapter/include/: device_profile_adapter.h  device_profile_client.h
adapter/pasteboard_progress/: pasteboard_progress.cpp  pasteboard_progress.h
adapter/security_level/: security_level.cpp  security_level.h  security_level_virtual.cpp
adapter/src/: device_profile_adapter.cpp  device_profile_client.cpp
adapter/test/: BUILD.gn  device_profile_adapter_test.cpp  device_profile_client_test.cpp
adapter/test/include/: device_profile_adapter_test.h
adapter/test/mock/: device_profile_client_mock.h
framework/framework/: BUILD.gn
framework/framework/clip/: clip_plugin.cpp  default_clip.cpp  default_clip.h
framework/framework/common/: common_utils.cpp  pasteboard_common.cpp  pasteboard_common_utils.cpp
framework/framework/device/: clip_para.cpp  dev_manager.cpp  dev_profile.cpp  device_profile_proxy.cpp  distributed_module_config.cpp  dm_adapter.cpp  para_handle.cpp  pasteboard_static_capability.cpp
framework/framework/event/: key_event_adapter.cpp
framework/framework/eventcenter/: event.cpp  event_center.cpp  pasteboard_event.cpp
framework/framework/ffrt/: ffrt_utils.cpp
framework/framework/permission/: permission_utils.cpp
framework/framework/serializable/: parcel_util.cpp  parcel_util.h  serializable.cpp  tlv_object.cpp
framework/framework/test/: BUILD.gn  dm_adapter_test.cpp  pasteboard_common_test.cpp  pasteboard_common_utils_test.cpp  tlv_object_test.cpp
framework/innerkits/: BUILD.gn  pasteboard_kit_map
framework/innerkits/include/: convert_utils.h  entity_recognition_observer.h  i_paste_data_processor.h  paste_data.h  paste_data_entry.h  paste_data_record.h  pasteboard_client.h  pasteboard_copy.h  pasteboard_delay_getter.h  pasteboard_disposable_observer.h  pasteboard_entry_getter.h  pasteboard_fd_guard.h  pasteboard_img_extractor.h  pasteboard_load_callback.h  pasteboard_observer.h  pasteboard_progress_signal.h  pasteboard_sa_callback.h  pasteboard_samgr_listener.h  pasteboard_service_loader.h  pasteboard_signal_callback.h  pasteboard_utils.h  pasteboard_web_controller.h  trans_listener.h
framework/innerkits/src/: convert_utils.cpp  entity_recognition_observer.cpp  i_paste_data_processor.cpp  paste_data.cpp  paste_data_entry.cpp  paste_data_record.cpp  paste_data_validator.cpp  pasteboard_client.cpp  pasteboard_copy.cpp  pasteboard_disposable_observer.cpp  pasteboard_entry_getter.cpp  pasteboard_fd_guard.cpp  pasteboard_img_extractor.cpp  pasteboard_load_callback.cpp  pasteboard_observer.cpp  pasteboard_progress_signal.cpp  pasteboard_sa_callback.cpp  pasteboard_samgr_listener.cpp  pasteboard_service_loader.cpp  pasteboard_signal_callback.cpp  pasteboard_utils.cpp  pasteboard_web_controller.cpp  trans_listener.cpp
framework/test/: BUILD.gn  cfi_blocklist.txt  paste_data_test.cpp  serializable_test.cpp  tlv_object_test.cpp
framework/test/include/: clip_factory.h  dev_profile_mock_test.h  device_manager_mock.h  distributed_clip.h  distributed_device_profile_client_mock.h  distributed_module_config_mock_test.h  dm_adapter_mock_test.h  iservice_registry.h  pasteboard_client_mock_test.h  system_ability_manager_client_mock.h
framework/test/mock/: device_manager_mock.cpp  device_profile_proxy_virtual.cpp  distributed_device_profile_client_mock.cpp  ffrt_utils_mock.cpp  system_ability_manager_client_mock.cpp
framework/test/pasteboard_img_extractor_mock_test/: ipc_skeleton.h  ipc_skeleton_mock.cpp  ipc_skeleton_mock.h  pasteboard_common.h  pasteboard_common_mock.cpp  pasteboard_common_mock.h  pasteboard_img_extractor_mock_test.cpp  sandbox_helper.h  sandbox_helper_mock.cpp  sandbox_helper_mock.h
framework/test/resource/: ohos_test.xml  pasteboardTest.txt
framework/test/src/: clip_para_test.cpp  clip_plugin_test.cpp  convert_utils_test.cpp  dev_profile_mock_test.cpp  dev_profile_test.cpp  distributed_module_config_mock_test.cpp  distributed_module_config_test.cpp  dm_adapter_mock_test.cpp  dm_adapter_test.cpp  event_center_test.cpp  event_test.cpp  ffrt_utils_test.cpp  message_parcel_warp_test.cpp  paste_data_entry_test.cpp  paste_data_record_test.cpp  paste_data_test.cpp  pasteboard_client_mock_test.cpp  pasteboard_client_proxy_mock_test.cpp  pasteboard_client_test.cpp  pasteboard_client_udmf_delay_test.cpp  pasteboard_copy_test.cpp  pasteboard_disposable_client_test.cpp  pasteboard_disposable_test.cpp  pasteboard_entity_client_test.cpp  pasteboard_event_test.cpp  pasteboard_multi_type_unified_data_delay_test.cpp  pasteboard_service_loader_test.cpp  pasteboard_unified_data_test.cpp  pasteboard_unified_data_uri_test.cpp  pasteboard_utils_test.cpp  pasteboard_web_controller_test.cpp  serializable_test.cpp  tlv_buffer_test.cpp  tlv_countable_test.cpp  tlv_object_test.cpp  tlv_readable_test.cpp  tlv_utils_test.cpp  tlv_writeable_test.cpp  web_controller_html_test.cpp  web_controller_record_test.cpp  (+1 more)
interfaces/cj/: BUILD.gn
interfaces/kits/: BUILD.gn  pasteboard_js_map
interfaces/ndk/: BUILD.gn  pasteboard_interface_map
interfaces/taihe/: BUILD.gn
services/: BUILD.gn  IPasteboardClientDeathObserver.idl  IPasteboardService.idl  IPasteboardSignal.idl  PasteboardTypes.idl  com.ohos.pasteboarddialog.p7b.gni  pasteboard_service_map
services/dialog/: BUILD.gn  pasteboard_dialog.hap
services/etc/: BUILD.gn  pasteboard.para.dac
services/switch/: pasteboard_switch.cpp  pasteboard_switch.h
services/test/: BUILD.gn
test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/unittest/: BUILD.gn
tools/ohos-pasteboard/: BUILD.gn  config.json  ohos-pasteboard.json
utils/test/: BUILD.gn  pasteboard_common_test.cpp  pasteboard_time_test.cpp
(+600 files in other folders)
