# Copyright (C) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

pasteboard_root_path = "//foundation/distributeddatamgr/pasteboard"

pasteboard_kits_path = "${pasteboard_root_path}/kits"

pasteboard_innerkits_path = "${pasteboard_root_path}/framework/innerkits"

pasteboard_framework_path = "${pasteboard_root_path}/framework/framework"

pasteboard_utils_path = "${pasteboard_root_path}/utils"

pasteboard_service_path = "${pasteboard_root_path}/services"

pasteboard_interfaces_path = "${pasteboard_root_path}/interfaces"

pasteboard_tlv_path = "${pasteboard_root_path}/framework/tlv"

pasteboard_uri_path = "${pasteboard_root_path}/framework/uri"

declare_args() {
  pasteboard_dlp_part_enabled = true
  pasteboard_device_info_manager_part_enabled = true
  pasteboard_device_manager_part_enabled = true
  pasteboard_screenlock_mgr_part_enabled = true
  pasteboard_vixl_part_enabled = true
  pasteboard_dataclassification_enabled = true

  if (defined(global_parts_info) &&
      !defined(global_parts_info.third_party_vixl)) {
    pasteboard_vixl_part_enabled = false
  }
  if (defined(global_parts_info) &&
      !defined(global_parts_info.security_dlp_permission_service)) {
    pasteboard_dlp_part_enabled = false
  }
  if (defined(global_parts_info) &&
      !defined(global_parts_info.deviceprofile_device_info_manager)) {
    pasteboard_device_info_manager_part_enabled = false
  }
  if (defined(global_parts_info) &&
      !defined(global_parts_info.distributedhardware_device_manager)) {
    pasteboard_device_manager_part_enabled = false
  }
  if (defined(global_parts_info) &&
      !defined(global_parts_info.theme_screenlock_mgr)) {
    pasteboard_screenlock_mgr_part_enabled = false
  }
  if (defined(global_parts_info) &&
      !defined(global_parts_info.security_dataclassification)) {
    pasteboard_dataclassification_enabled = false
  }
}
