# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

ohos_shared_library("pasteboard_adapter") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "${pasteboard_framework_path}/include",
    "${pasteboard_utils_path}/native/include",
    "include",
  ]

  sources = []

  external_deps = []

  if (pasteboard_device_info_manager_part_enabled) {
    sources += [
      "src/device_profile_adapter.cpp",
      "src/device_profile_client.cpp",
    ]

    external_deps += [
      "cJSON:cjson",
      "c_utils:utils",
      "device_info_manager:distributed_device_profile_common",
      "device_info_manager:distributed_device_profile_sdk",
      "hilog:libhilog",
      "ipc:ipc_single",
      "samgr:samgr_proxy",
    ]
  }

  cflags = [
    "-fvisibility=hidden",
    "-Wno-multichar",
    "-O2",
  ]
  cflags_cc = [
    "-fvisibility=hidden",
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]

  subsystem_name = "distributeddatamgr"
  part_name = "pasteboard"
}
