# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

group("fuzztest") {
  testonly = true

  deps = []
  if (pasteboard_dlp_part_enabled &&
      pasteboard_device_info_manager_part_enabled &&
      pasteboard_device_manager_part_enabled &&
      pasteboard_screenlock_mgr_part_enabled) {
    deps += [
      "fuzztest/pasteboardconcurrent_fuzzer:fuzztest",
      "fuzztest/pasteboarddata_fuzzer:fuzztest",
      "fuzztest/pasteboarddisposable_fuzzer:fuzztest",
      "fuzztest/pasteboardservice_fuzzer:fuzztest",
    ]
  }
}

group("unittest") {
  testonly = true
  deps = []
  if (pasteboard_dlp_part_enabled &&
      pasteboard_device_info_manager_part_enabled &&
      pasteboard_device_manager_part_enabled &&
      pasteboard_screenlock_mgr_part_enabled &&
      !use_libfuzzer) {
    deps += [
      "${pasteboard_root_path}/adapter/test:unittest",
      "${pasteboard_root_path}/framework/test:unittest",
      "${pasteboard_root_path}/interfaces/kits/napi/test/unittest/pasteboardapi:unittest",
      "${pasteboard_root_path}/interfaces/kits/napi/test/unittest/pasteboardperf:unittest",
      "${pasteboard_root_path}/interfaces/ndk/unittest:unittest",
      "${pasteboard_root_path}/services/test:unittest",
      "${pasteboard_root_path}/utils/test:unittest",
    ]
  }
}
