# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

module_output_path = "pasteboard/pasteboard"

ohos_unittest("AdapterDeviceProfileClientTest") {
  module_out_path = module_output_path

  cflags = [ "-fno-access-control" ]

  include_dirs = [
    "${pasteboard_root_path}/adapter/include",
    "${pasteboard_root_path}/adapter/test/mock/device_profile",
    "${pasteboard_root_path}/adapter/test/mock/samgr",
    "${pasteboard_utils_path}/native/include",
  ]

  sources = [
    "${pasteboard_root_path}/adapter/src/device_profile_client.cpp",
    "device_profile_client_test.cpp",
    "mock/device_profile/distributed_device_profile_proxy.cpp",
    "mock/samgr/iservice_registry.cpp",
    "mock/samgr/system_ability_manager_mock.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

group("unittest") {
  testonly = true

  deps = [ ":AdapterDeviceProfileClientTest" ]
}
