# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

group("build_module") {
  deps = [ ":pasteboard_framework" ]
}
config("module_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${pasteboard_utils_path}/native/include",
    "${pasteboard_service_path}/dfx/src",
    "include",
  ]
}

ohos_shared_library("pasteboard_framework") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  sources = [
    "${pasteboard_utils_path}/native/src/pasteboard_common.cpp",
    "clip/clip_plugin.cpp",
    "clip/default_clip.cpp",
    "device/dev_profile.cpp",
    "device/device_profile_proxy.cpp",
    "device/distributed_module_config.cpp",
    "device/dm_adapter.cpp",
    "eventcenter/event.cpp",
    "eventcenter/event_center.cpp",
    "eventcenter/pasteboard_event.cpp",
    "ffrt/ffrt_utils.cpp",
    "permission/permission_utils.cpp",
    "serializable/serializable.cpp",
  ]
  ldflags = [ "-Wl,--gc-sections" ]
  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-fvisibility=hidden",
    "-Wno-multichar",
    "-O2",
  ]
  cflags_cc = [
    "-fdata-sections",
    "-ffunction-sections",
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-fomit-frame-pointer",
    "-fvisibility=hidden",
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]

  defines = []

  public_configs = [ ":module_public_config" ]
  include_dirs = [ "${pasteboard_root_path}/adapter/include" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "cJSON:cjson",
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  if (pasteboard_device_manager_part_enabled) {
    external_deps += [ "device_manager:devicemanagersdk" ]
    defines += [ "PB_DEVICE_MANAGER_ENABLE" ]
  }
  subsystem_name = "distributeddatamgr"
  part_name = "pasteboard"
}
